tests/semantic_cases/valid/typed_param_shadows_global_type.ob0
MODULE Main;
TYPE Count = INTEGER;
PROCEDURE P(Count: INTEGER);
BEGIN
  WriteInt(Count)
END P;
BEGIN
END Main.
