tests/semantic_cases/invalid/typed_param_shadows_builtin_type.ob0
(* INVALID: parameter name shadows reserved builtin type name *)
MODULE Main;
PROCEDURE P(INTEGER: INTEGER);
BEGIN
  WriteInt(INTEGER)
END P;
BEGIN
END Main.
